# libunistring

./: .gitignore  AUTHORS  ChangeLog  HACKING  INSTALL  INSTALL.generic  Makefile.am  NEWS  README  autogen.sh  build_ios.sh  configure.ac  gitsub.sh  version.sh
Admin/: README.update  containing  dependent  gen-uni-tables  gen-uninames
build-aux/: .gitignore  fixaclocal  run-test  texi2html
build-aux/snippet/: .gitignore
doc/: .gitignore  Makefile.am  libunistring.texi  unicase.texi  uniconv.texi  unictype.texi  unigbrk.texi  unilbrk.texi  uniname.texi  uninorm.texi  uniregex.texi  unistdio.texi  unistr.texi  uniwbrk.texi  uniwidth.texi
gnulib-local/: .gitignore  Makefile.am
gnulib-local/lib/: unicase.h.diff  uniconv.h.diff  unictype.h.diff  unilbrk.h.diff  unistr.h.diff  unitypes.h.diff  uniwidth.h.diff
gnulib-m4/: .gitignore  gnulib-cache.m4
lib/: .gitignore  Makefile.am  declared.sh  exported.sh.in  libunistring.rc  stdbool.mini.h  stdint.mini.h  unistring-notinline.h
lib/glthread/: .gitignore
lib/unicase/: .gitignore
lib/uniconv/: .gitignore
lib/unictype/: .gitignore
lib/unigbrk/: .gitignore
lib/unilbrk/: .gitignore
lib/uniname/: .gitignore
lib/uninorm/: .gitignore
lib/unistdio/: .gitignore
lib/unistr/: .gitignore
lib/unistring/: cdefs.h  cdefs.in.h
lib/uniwbrk/: .gitignore
lib/uniwidth/: .gitignore
m4/: libtool.m4  woe32-dll.m4
tests/: .gitignore  Makefile.am
tests/glthread/: .gitignore
tests/unicase/: .gitignore
tests/uniconv/: .gitignore
tests/unictype/: .gitignore
tests/unigbrk/: .gitignore
tests/unilbrk/: .gitignore
tests/uniname/: .gitignore
tests/uninorm/: .gitignore
tests/unistdio/: .gitignore
tests/unistr/: .gitignore
tests/uniwbrk/: .gitignore
tests/uniwidth/: .gitignore
woe32dll/: export.h  unistring-exports.c
